# secure_fl

./: .gitignore  README.md
dev/: Dockerfile  README.md  attacks.py  mpc.py  pyproject.toml
dev/mpspdz/ExternalIO/: client.py
dev/secagg_cifar10/: __init__.py  client_app.py  server_app.py  task.py  workflow_with_log.py
dev/secagg_har/: __init__.py  client_app.py  data_loaders.py  server_app.py  task.py  workflow_with_log.py
dev/securefl/: client_app.py  data_loaders.py  server_app.py  task.py
