[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secagg_har"
version = "1.0.0"
description = "Secure Aggregation in Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "secagg_har.server_app:app"
clientapp = "secagg_har.client_app:app"

[tool.flwr.app.config]
num-clients = 30
num-server-rounds = 2
fraction-evaluate = 0.3
local-epochs = 1
learning-rate = 0.1
batch-size = 128
seed = 1
bias = 0.5
p = 0.1
server-pc = 100

# Parameters for the SecAgg+ protocol
num-shares = 3
reconstruction-threshold = 2
max-weight = 9000

# For testing
num-dropped = 5
timeout = 120

# MPC config
mpc-enabled = false
protocol = "semi2k"
byz = "label_flipping_attack"
num-byz = 0
port = 14000
chunk-size = 500
num-parties = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 30